# alpine-clang-vcpkg

./: .dockerignore  .gitignore  .vcpkg-commit  BUILDING.md  CLAUDE.md  Dockerfile  LICENSE  LTO.md  LTO_IDEA.md  README.md  claude-web-docker-setup.sh  setup-docker.sh
.github/workflows/: check-vcpkg-updates.yml  docker-publish.yml  docker-validate.yml
buildsystems/: vcpkg.cmake
test/: CMakeLists.txt  main.c  mylib.c  mylib.h  vcpkg-configuration.json  vcpkg.json
test/atomiclib/: CMakeLists.txt  atomiclib.c  atomiclib.h
test/ports/atomiclib/: portfile.cmake  vcpkg.json
toolchains/: extra-flags.cmake  linux-lto-thin.cmake  linux-lto.cmake  linux.cmake  lto-thin.cmake  lto.cmake
triplets/lto/: arm64-linux.cmake  x64-linux.cmake
triplets/lto-thin/: arm64-linux.cmake  x64-linux.cmake
